# python-lamedec

./: .gitignore  README.md  pyproject.toml
lamedec/: __init__.py  hipdecoder.py  lamedec.py  mp3reader.py
samples/: README.md  decodemp3.py
tests/: _sample_mp3.py  test_hipdecoder.py  test_lamedec.py  test_mp3reader.py
