[tool.poetry]
name = "lamedec"
version = "0.1.1"
description = ""
authors = ["sengokyu <sengokyu+gh@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/sengokyu/python-lamedec"
repository = "https://github.com/sengokyu/python-lamedec.git"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
lame-ctypes = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
